extracted acc information

--- a/CodeBotApp/CodeBotApp.csproj
+++ b/CodeBotApp/CodeBotApp.csproj
@@ -57,6 +57,7 @@
     <Reference Include="mscorlib.extensions" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccountInformation.cs" />
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
